--- a/argocd/argocd.yaml
+++ b/argocd/argocd.yaml
@@ -20,15 +20,15 @@ spec:
             server:
               insecure: true
         server:
-          extensions:
-            enabled: true
-            extensionList:
-              - name: extension-trivy
-                env:
-                  - name: EXTENSION_URL
-                    value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.1.0/extension-trivy.tar
-                  - name: EXTENSION_CHECKSUM_URL
-                    value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.1.0/extension-trivy_checksums.txt
+          # extensions:
+          #   enabled: true
+          #   extensionList:
+          #     - name: extension-trivy
+          #       env:
+          #         - name: EXTENSION_URL
+          #           value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.1.0/extension-trivy.tar
+          #         - name: EXTENSION_CHECKSUM_URL
+          #           value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.1.0/extension-trivy_checksums.txt
           ingress:
             enabled: true
             hosts:
